--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ h2 { font-size: 1.6em; }
 h3 { font-size: 1.4em; }
 h4 { font-size: 1.15em; }
 h5, h6 { font-size: 1em; }
-h4 { font-family: "Hiragino Sans GB", sans-serif, "Century Gothic", "Lucida Grande", Lucida, Verdana; }
+h4 { font-family: "Lucida Grande", sans-serif; "Hiragino Sans GB", Lucida, Verdana; }
 h4>abbr { display: inline-block; opacity: 0.6; font-family: 'Yanone Kaffeesatz'; font-size: 0.8em; line-height: 1.2em; /*font-style: italic; font-family: cambria, georgia, times, serif; border-bottom: 1px dotted #333;*/ }
 #content { width: 98%; }	
 article { border-bottom: 1px solid #cccccc; margin: 0 auto; }
