--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,9 @@ h1, h2, h3, h4, h5, h6 { margin-top: 0.8em; margin-bottom: 0.5em; line-height: 1
 h1 { font-size: 1.8em; }
 h2 { font-size: 1.6em; }
 h3 { font-size: 1.4em; }
-h4 { font-size: 1.15em; }
+h4 { font-size: 1.15em; font-style: italic; }
 h5, h6 { font-size: 1em; }
-h4 { font-family: "Lucida Grande", sans-serif; "Hiragino Sans GB", Lucida, Verdana; }
+h4 { font-family: "adelle", "Lucida Grande", sans-serif; "Hiragino Sans GB", Lucida, Verdana; }
 h4>abbr { display: inline-block; opacity: 0.6; font-family: 'Yanone Kaffeesatz'; font-size: 0.8em; line-height: 1.2em; /*font-style: italic; font-family: cambria, georgia, times, serif; border-bottom: 1px dotted #333;*/ }
 #content { width: 98%; }	
 article { border-bottom: 1px solid #cccccc; margin: 0 auto; }
