--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ p { margin: 0; padding: 0; }
 
 /* main */
 html { background: whitesmoke; }
-#wrapper { margin: 0 auto; width: 600px; text-align: left; padding-top: 9px; color: #555; text-shadow: rgba(255,254,255,0.6) 0 1px 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; font: 500 14px/1.8 "adelle", Georgia, sans-serif; text-align: left; word-wrap: break-word; }
+#wrapper { margin: 0 auto; width: 600px; text-align: left; padding-top: 9px; color: #555; text-shadow: rgba(255,254,255,0.6) 0 1px 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; font: 500 14px/1.8 "adelle", Georgia, sans-serif, "Source Hans Sans SC"; text-align: left; word-wrap: break-word; }
 #header { font-family: 'chaparral-pro-display', 'Chaparral Pro', 'Palatino Linotype', 'Hoefler Text', georgia; font-size: 2.0em; line-height: 2.4em; float: left; }
 #header a:hover, #header a:active { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { margin-top: 0.8em; margin-bottom: 0.5em; line-height: 1.5; }
@@ -43,7 +43,7 @@ h2 { font-size: 1.6em; }
 h3 { font-size: 1.4em; }
 h4 { font-size: 1.05em;}
 h5, h6 { font-size: 1em; }
-h4 { font-family: "adelle", "Lucida Grande", sans-serif; "Hiragino Sans GB", Lucida, Verdana; }
+h4 { font-family: "adelle", "Lucida Grande", sans-serif, "Source Hans Sans SC", "Hiragino Sans GB", Lucida, Verdana !important; }
 h4>abbr { display: inline-block; opacity: 0.6;  font-style: italic; font-family: 'Yanone Kaffeesatz'; font-size: 0.8em; line-height: 1.2em; /*font-style: italic; font-family: cambria, georgia, times, serif; border-bottom: 1px dotted #333;*/ }
 #content { width: 98%; }
 article { border-bottom: 1px solid #cccccc; margin: 0 auto; }
