--- a/css/main.css
+++ b/css/main.css
@@ -26,9 +26,9 @@ article { -webkit-animation-duration: .3s; }
 
 /* main things */
 #wrapper { -webkit-font-smoothing:antialiased; }
-::selection { background: rgba(255,255,150,.9); color: #333; }
+::selection { background: rgba(229, 77, 66, .7); color: #FFF; text-shadow: #993044 0 1px 0;}
 ::-moz-selection { background: rgba(255,255,150,.9); color: #333; /*text-shadow: #993044 0 1px 0;*/ }
-a { color: /*rgba(0, 168, 198, 1.0);*/ rgba(0,144,226,.9); text-decoration: none; }
+a { color: rgba(229, 77, 66, .6); /*rgba(0, 168, 198, 1.0); rgba(0,144,226,.9);*/ text-decoration: none; }
 a:hover, a:active { text-decoration: underline; }
 p { margin: 0; padding: 0; }
 
@@ -36,7 +36,7 @@ p { margin: 0; padding: 0; }
 html { background: white; }
 #wrapper { margin: 0 auto; width: 600px; text-align: left; padding-top: 9px; color: #555; text-shadow: rgba(255,254,255,0.6) 0 1px 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; font: 500 14px/1.8 "adelle", Georgia, sans-serif, "Source Hans Sans SC"; text-align: left; word-wrap: break-word; }
 #header { font-family: Skia, Helvetica, georgia; font-weight: 100; font-size: 1.8em; line-height: 2.4em; float: left; }
-#header a { color: rgba(78, 79, 84, .75); }
+#header a { color: rgba(229, 77, 66, 1.0); /*rgba(78, 79, 84, .75);*/ }
 #header a:hover, #header a:active { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { margin-top: 0.8em; margin-bottom: 0.5em; line-height: 1.5; }
 h1 { font-size: 1.8em; }
