--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,9 @@ article { -webkit-animation-duration: .3s; }
 a { color: rgba(229, 77, 66, .6); /*rgba(0, 168, 198, 1.0); rgba(0,144,226,.9);*/ text-decoration: none; }
 a:hover, a:active { text-decoration: underline; }
 p { margin: 0; padding: 0; }
+hr { border: 0; border-bottom: 1px dashed #ccc; background: #999; }
 
-/* from http://lym.io/RainbowSafari/ */
+/* credits to http://lym.io/RainbowSafari/ */
 #rainbowsafari { left: 0; right: 0; top: 0; height: 100px; z-index: 99999999999; position: fixed; content: ""; display: block; -webkit-transform: translateY(-99.99px); }
 .rsred { background: rgba(229, 77, 66, .75); }
 
